force-app/main/default/objects/SimulacaoCredito__c/SimulacaoCredito__c.object-meta.xml
<CustomObject>
    <description>Objeto criado para armazenar as simulações retornadas pelo FlowFinance durante o cálculo de parcelas.</description>
    <label>Simulação de crédito</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulações de crédito</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>