force-app/main/default/objects/SimulacaoCredito__c/fields/Carencia__c.field-meta.xml
<CustomField>
    <fullName>Carencia__c</fullName>
    <label>Carência</label>
    <type>TextArea</type>
</CustomField>