force-app/main/default/objects/SimulacaoCredito__c/fields/CET__c.field-meta.xml
<CustomField>
    <fullName>CET__c</fullName>
    <label>CET</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>