force-app/main/default/objects/SimulacaoCredito__c/fields/DataLiberacao__c.field-meta.xml
<CustomField>
    <fullName>DataLiberacao__c</fullName>
    <label>Data de liberação</label>
    <type>Date</type>
</CustomField>