force-app/main/default/objects/SimulacaoCredito__c/fields/DataPrimeiroPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiroPagamento__c</fullName>
    <label>Data do primeiro pagamento</label>
    <type>Date</type>
</CustomField>