force-app/main/default/objects/SimulacaoCredito__c/fields/DataUltimoPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataUltimoPagamento__c</fullName>
    <label>Data do último pagamento</label>
    <type>Date</type>
</CustomField>