force-app/main/default/objects/SimulacaoCredito__c/fields/IOF__c.field-meta.xml
<CustomField>
    <fullName>IOF__c</fullName>
    <label>IOF</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>