force-app/main/default/objects/SimulacaoCredito__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Simulações de crédito</relationshipLabel>
    <relationshipName>SimulacoesCredito</relationshipName>
    <type>Lookup</type>
</CustomField>