force-app/main/default/objects/SimulacaoCredito__c/fields/OutrosCustos__c.field-meta.xml
<CustomField>
    <fullName>OutrosCustos__c</fullName>
    <label>Outros custos</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>