force-app/main/default/objects/SimulacaoCredito__c/fields/Periodicidade__c.field-meta.xml
<CustomField>
    <fullName>Periodicidade__c</fullName>
    <label>Periodicidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MONTHLY</fullName>
                <label>Mensal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>