force-app/main/default/objects/SimulacaoCredito__c/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <label>Prazo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>