force-app/main/default/objects/SimulacaoCredito__c/fields/SaldoTotal__c.field-meta.xml
<CustomField>
    <fullName>SaldoTotal__c</fullName>
    <label>Saldo total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>