force-app/main/default/objects/SimulacaoCredito__c/fields/TaxaCadastro__c.field-meta.xml
<CustomField>
    <fullName>TaxaCadastro__c</fullName>
    <label>Taxa de cadastro</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>