force-app/main/default/objects/SimulacaoCredito__c/fields/TaxaJuros__c.field-meta.xml
<CustomField>
    <fullName>TaxaJuros__c</fullName>
    <label>Taxa de juros</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>