force-app/main/default/objects/SimulacaoCredito__c/fields/TipoIOF__c.field-meta.xml
<CustomField>
    <fullName>TipoIOF__c</fullName>
    <label>Tipo de IOF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUSINESS</fullName>
                <label>PJ</label>
            </value>
            <value>
                <fullName>BUSINESS_SIMPLE</fullName>
                <label>PJ Simples</label>
            </value>
            <value>
                <fullName>ZERO</fullName>
                <label>Zerado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>