force-app/main/default/objects/SimulacaoCredito__c/fields/ValorFinanciado__c.field-meta.xml
<CustomField>
    <fullName>ValorFinanciado__c</fullName>
    <label>Valor financiado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>