force-app/main/default/objects/SimulacaoCredito__c/fields/ValorLiberado__c.field-meta.xml
<CustomField>
    <fullName>ValorLiberado__c</fullName>
    <label>Valor liberado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>