force-app/main/default/objects/SimulacaoCredito__c/fields/ValorSolicitado__c.field-meta.xml
<CustomField>
    <fullName>ValorSolicitado__c</fullName>
    <label>Valor solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>