force-app/main/default/objects/SimulacaoCredito__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ValorSolicitado__c</columns>
    <columns>ValorLiberado__c</columns>
    <columns>Prazo__c</columns>
    <columns>Periodicidade__c</columns>
    <columns>Conta__c</columns>
    <columns>Lead__c</columns>
    <columns>DataLiberacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>